# Podalirius

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
src/: config.py  exceptions.py  main.py  utils.py
src/data/: appointment_data.py  auth_data.py  base_data.py  base_sql_models.py  connections.py  create_db.sql  crud.py  doctor_data.py  mysql.py  patient_data.py  redis_config.py  service_data.py  specialty_data.py  sql_models.py
src/exceptions/: exc.py  handlers.py
src/logger/: config.json  setup.py
src/model/: appointment.py  appointment_models.py  auth_models.py  base_models.py  doctor.py  doctor_models.py  form_models.py  patient.py  patient_models.py  schedule.py  schedule_models.py  service.py  service_models.py  specialty.py  specialty_models.py
src/service/: appointment_services.py  auth_services.py  doctor_services.py  form_services.py  patient_services.py  service_services.py  specialty_services.py
src/static/: patch.js  put.js  render_booking_form.js  reschedule_appointment_form.js  update_patient_info.js
src/templates/: appointment_new.html  appointment_notification.html  base.html  datetime_form_fields.html  doctor_detail.html  form_input_err.html  form_rendering.html  index.html  lab_tests.html  login.html  macros.html  my_appointment_info.html  my_appointments.html  my_info.html  specialties.html  specialty_detail.html  verify_login.html
src/web/: appointment_routes.py  auth_routes.py  base_routes.py  doctor_routes.py  index_routes.py  patient_routes.py  routes.py  (+2 more)
tests/: conftest.py
(+60 files in other folders)
